# rocket-demo

./: Cargo.toml  docker-compose.yaml  dockerfile
.github/workflows/: rust.yml
migrations/2020-05-24-222218_create_todo/: down.sql  up.sql
src/: connect.rs  main.rs  models.rs  query.rs  router.rs  schema.rs
